--- a/post.html
+++ b/post.html
@@ -1,32 +1,29 @@
 <html>
     <head>
-        <meta property="og:image" content="https://grcodeclub.github.io/file/background/1.jpg"/>
-        <meta property="og:title" content="GrCode Club | Δημοσιεύσεις">
+        <meta property="og:image" content="https://grcodeclub.gr/file/background/network.png"/>
+        <meta property="og:title" content="Δίκτυα Υπολογιστών | Ορολογία">
         <script src="https://grcodeclub.github.io/js/add/data.js"></script>
     </head>
-
 
     <body id="basic">
         <div class="container">
             <div id="add_headder_and_menu"></div>
             <div class="Text"> <!--Αρχή Κειμένου-->
                 <div class="text_bg" > <!-- Αρχή Background Κειμένου-->
-                    <h1 class="title">Δημοσιεύσεις<br><div><input style="width: 100%;" type="input" class="form__field" placeholder="Αναζήτηση Τίτλου" id='searchInput1'/>
-                        <div><input style="width: 100%;" type="input" class="form__field" placeholder="Αναζήτηση Συγγραφέα" id='searchInput2'/></div>
-                        <div><input style="width: 100%;" type="input" class="form__field" placeholder="Αναζήτηση Κατηγορία" id='searchInput3'/></div></h1>
-                        <table id="search_table_page_3_input">
+                    <h1 class="title">Ορολογία<br><div class="search" id="search">
+                        <input style="width: 100%;" type="input" class="form__field" placeholder="Αναζήτηση Τίτλου" id='searchInput'/>
+                        <input style="width: 100%;" type="input" class="form__field" placeholder="Αναζήτηση Συγγραφέα" id='searchInput2'/>
+                        <input style="width: 100%;" type="input" class="form__field" placeholder="Αναζήτηση Κατηγορία" id='searchInput3'/>
+                    </div></h1>
+                     <table id="search_table_page_3">
                         <tr id="title-table"><td>Τίτλος</td> <td>Κατηγορία</td> <td>Συγγραφέας</td> <td>Σύντομη Περιγραφή</td></tr>
                         <tr><td><a href="./hardware/build">Build</a></td> <td>Hardware</td> <td>GrCode Club</td> <td>-</td></tr>
                         <tr><td><a href="./mobile/nfc">NFC</a></td> <td>Mobile</td> <td>GrCode Club</td> <td>-</td></tr>
-                        <tr><td><a href="./mobile/sim">SIM</a></td> <td>Mobile</td> <td>GrCode Club</td> <td>-</td></tr>
-                    </table>
-                    <div class="pagination" id="pagination"></div>
+                        <tr><td><a href="./mobile/sim">SIM</a></td> <td>Mobile</td> <td>GrCode Club</td> <td>-</td></tr></table>
+                     <div class="pagination" id="pagination"></div>
                 </div><!-- Τέλος Background Κειμένου-->
             </div> <!--Τέλος Κειμένου-->
-
         </div> <!--Τέλος container-->
-        
-        <!-- Footer -->
-        <footer id="addFooter"></footer>
+         <footer id="addFooter"></footer> <!-- Footer -->
     </body>
 </html>
