--- a/create/index.html
+++ b/create/index.html
@@ -10,7 +10,7 @@
             <div id="add_headder_and_menu"></div>
             <div class="Text"> <!--Αρχή Κειμένου-->
                 <div class="text_bg"> <!-- Αρχή Background Κειμένου-->
-                    <h1 class="title">Create</h1>
+                    <h1 class="title">Create GrCode Club</h1>
                       <h2 style="margin: 5%; text-align: center;">
                         Σκοπός του Create είναι να κατανοήσει ο χρηστής όλες τις λειτουργίες που έχουμε εισάγει στην ιστοσελίδα. 
                         Επιπλέον θέλουμε να παρουσιάσουμε πληροφορίες για τον πως ενσωματώσαμε τις λειτουργίες στην ιστοσελίδα μας.
@@ -24,7 +24,23 @@
                           <tr><td>συντόμευση</td><td>Έχουμε μπλοκάρει την συγκεκριμένη συντόμευση από το πληκτρολόγιο<br>CTR+U<br>CTR+P<br>CTR+S</td></tr>
                       </table>
                       <div class="pagination" id="pagination"></div>
-                       <script src="https://grcodeclub.gr/javascript/search/search-tables-pages.js"></script>
+
+                      <label style="margin-left: 10px;">Διάλεξε αρχείο</label>
+                      <select id="code" name="code" style="color: white; border-radius: 10px; background-color: rgba(0, 0, 0, 0.795); border: none; font-size: 18px; outline: none; cursor: pointer;">
+                          <option value="-">Επιλέξτε</option>
+                          <option value="https://raw.githubusercontent.com/grcodeclub/more/main/create/basic.html">Η δομή της HTML</option>
+                      </select><br>
+                      <div class="bg_preview">
+                          <div class="appearance">
+                              <div class="space">
+                                  <div class="buttons1"></div>
+                                  <div class="buttons2"></div>
+                                  <div class="buttons3"></div>
+                              </div>
+                              <div id="name"></div>
+                          </div>
+                          <div id="load"></div>
+                      </div>
                 </div><!-- Τέλος Background Κειμένου-->
             </div> <!--Τέλος Κειμένου-->
         </div> <!--Τέλος container-->
