--- a/tools/index.html
+++ b/tools/index.html
@@ -2,23 +2,22 @@
     <head>
         <meta name="viewport" content="width=device-width, initial-scale=0.8">
         <meta property="og:image" content="https://grcodeclub.github.io/files-page/preview/basic.png"/>
-        <meta property="og:title" content="Υπηρεσίες της Google">
-        <script src="https://grcodeclub.github.io/js/jquery.js"></script>
-        <script src="https://grcodeclub.gr/js/menu/basic.js"></script>
-        <script src="https://grcodeclub.github.io/js/add/head.js"></script>
+        <meta property="og:title" content="MyTools">
+        <script src="https://grcodeclub.github.io/js/add/data.js"></script>
         <title> GrCode Club</title>
     </head>
 
     <body class="basic">
-    <div class="container">
-        <div id="add_headder_and_menu"></div><script src="https://grcodeclub.github.io/js/add/headder_and_menu.js"></script>
-        <div class="Text"> <!--ΑΡΧΗ Text-->
+    <div class="container-notmenu">
+        <div id="add_headder"></div><script src="https://grcodeclub.github.io/js/add/headder_and_menu.js"></script>
+        <div class="Text-notmenu"> <!--ΑΡΧΗ Text-->
             <div class="text_bg">
-                <h1 class="title">Πρωτόκολλα<br><div class="search" id="search"><input style="width: 100%;" type="input" class="form__field" placeholder="Αναζήτηση" id='searchInput'/></div></h1>
-                <table id="table" class="style2">
+                <h1 class="title">Εργαλεία<br><div class="search" id="search"><input style="width: 100%;" type="input" class="form__field" placeholder="Αναζήτηση" id='searchInput'/></div></h1>
+                <table id="search_table_page">
                    <tr id="title-table"><td>Εργαλείο</td><td>Δημιουργός</td><td>Περιγραφή</td></tr>
                    <tr><td><a href="https://grcodeclub.gr/more/tools/convert" target="_blank">Convert</a></td><td>GrCode Club</td><td>Μετατροπέας Hex, Binary, Decimal, Base64</td></tr>
                    <tr><td><a href="https://grcodeclub.gr/more/tools/markdown" target="_blank">Markdown</a></td><td>GrCode Club</td><td>Markdown Preview</td></tr>
+                   <tr><td><a href="https://grcodeclub.gr/more/tools/cookies" target="_blank">MyCookies</a></td><td>GrCode Club</td><td>-</td></tr>
 
                 </table>
                 <div class="pagination" id="pagination"></div>
