--- a/create/google.html
+++ b/create/google.html
@@ -1,6 +1,6 @@
 <html>
     <head>
-        <meta property="og:image" content="https://grcodeclub.gr/files-page/preview/programming.png"/>
+        <meta property="og:image" content="https://grcodeclub.github.io/files-page/preview/basic.png"/>
         <meta property="og:title" content="Build GrCode Club | Google Tools ">
         <script src="https://grcodeclub.github.io/js/add/data.js"></script>
         <script src="https://grcodeclub.github.io/more/create/js/menu.js"></script>
