--- a/post.html
+++ b/post.html
@@ -1,6 +1,6 @@
 <html>
     <head>
-        <meta property="og:image" content="https://grcodeclub.gr/file/background/network.png"/>
+        <meta property="og:image" content="https://grcodeclub.github.io/files-page/preview/basic.png"/>
         <meta property="og:title" content="Δίκτυα Υπολογιστών | Ορολογία">
         <script src="https://grcodeclub.github.io/js/add/data.js"></script>
     </head>
