--- a/tools/cookies/index.html
+++ b/tools/cookies/index.html
@@ -1,6 +1,6 @@
 <html>
     <head>
-        <meta property="og:image" content="https://grcodeclub.github.io/files-page/preview/website.png">
+        <meta property="og:image" content="https://grcodeclub.github.io/files-page/preview/basic.png"/>
         <meta property="og:title" content="MyCookies">
         <script src="https://grcodeclub.github.io/js/add/data.js"></script>
     </head>
