--- a/create/index.html
+++ b/create/index.html
@@ -5,7 +5,7 @@
         <script src="https://grcodeclub.github.io/js/add/data.js"></script>
         <script src="https://grcodeclub.github.io/more/create/js/menu.js"></script>
     </head>
-    <body>
+    <body id="create">
         <div class="container">
             <div id="add_headder_and_menu"></div>
             <div class="Text"> <!--Αρχή Κειμένου-->
